// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Components: RenderInput renders checkbox correctly 1`] = `
<RenderInput
  handleBlur={[MockFunction]}
  handleChange={[MockFunction]}
  handleFocus={[MockFunction]}
  id="email"
  label="Email"
  meta={
    Object {
      "asyncValidating": false,
      "error": null,
      "touched": false,
    }
  }
  name="email"
  placeholder="jane"
  required={true}
  type="checkbox"
  value=""
>
  <div
    className="form-input-checkbox"
  >
    <input
      checked=""
      className=""
      id="email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="jane"
      type="checkbox"
      value=""
    />
    <label
      htmlFor="email"
    >
      Email
    </label>
  </div>
</RenderInput>
`;

exports[`Form Components: RenderInput renders correctly 1`] = `
<RenderInput
  handleBlur={[MockFunction]}
  handleChange={[MockFunction]}
  handleFocus={[MockFunction]}
  id="email"
  label="Email"
  meta={
    Object {
      "asyncValidating": false,
      "error": null,
      "touched": false,
    }
  }
  name="email"
  placeholder="jane"
  required={true}
  type="email"
  value=""
>
  <div
    className="form-input"
  >
    <label
      htmlFor="email"
    >
      Email
      <span
        className="danger"
      >
        *
      </span>
    </label>
    <input
      className=""
      id="email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="jane"
      type="email"
      value=""
    />
  </div>
</RenderInput>
`;

exports[`Form Components: RenderInput shows error when found 1`] = `
<RenderInput
  handleBlur={[MockFunction]}
  handleChange={[MockFunction]}
  handleFocus={[MockFunction]}
  id="email"
  label="Email"
  meta={
    Object {
      "asyncValidating": false,
      "error": "This is an error",
      "touched": true,
    }
  }
  name="email"
  placeholder="jane"
  required={true}
  type="email"
  value="jane@smith.me"
>
  <div
    className="form-input"
  >
    <label
      htmlFor="email"
    >
      Email
      <span
        className="danger"
      >
        *
      </span>
    </label>
    <input
      className="is-invalid"
      id="email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="jane"
      type="email"
      value="jane@smith.me"
    />
    <div
      className="invalid-feedback"
    >
      This is an error
    </div>
  </div>
</RenderInput>
`;
